[package]
name = "tide-serve"
version = "0.0.3"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "a simple http file server binary based on tide"
keywords = ["tide", "http", "file", "server"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jbr/tide-serve"


[dependencies]
async-std = { version = "1.6.5", features = ["attributes"] }
tide = "0.13.0"
driftwood = "0.0.3"
tide-rustls = "0.1.2"
structopt = "0.3.18"
portpicker = "0.1.0"
http-client = "6.0.0"
