[package]
name = "tide-serve"
version = "0.0.8"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "a simple http file server binary based on tide"
keywords = ["tide", "http", "file", "server"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jbr/tide-serve"

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
tide = "0.15.1"
driftwood = "0.0.5"
tide-rustls = "0.1.6"
structopt = "0.3.21"
http-client = "6.2.0"
