[package]
name = "tide-serve"
version = "0.0.11"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "a simple http file server binary based on tide"
keywords = ["tide", "http", "file", "server"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jbr/tide-serve"

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
tide = "0.16.0"
driftwood = "0.0.6"
tide-rustls = "0.3.0"
structopt = "0.3.25"
http-client = "6.5.1"
